--- a/index.html
+++ b/index.html
@@ -3,5 +3,12 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub</p>
+<script>
+    var san_jose = [2362, 2360,	2467, 2571,	2955, 3290,	3279, 3422,	3458]
+    var seattle = [1742, 1726,	1773, 1983,	2136, 2372,	2483, 2544,	2509]
+    var austin = [1303,	1388, 1458,	1581, 1692,	1768, 1771,	1756, 1793]
+    var raleigh = [1191, 1208,	1219, 1266,	1316, 1347,	1380, 1402,	1443]
+
+</script>
 </body>
 </html>
