--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub</p>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
     var san_jose = [2362, 2360,	2467, 2571,	2955, 3290,	3279, 3422,	3458]
     var seattle = [1742, 1726,	1773, 1983,	2136, 2372,	2483, 2544,	2509]
